ChangeLog for RQL
=================

2010-04-20  --  0.26.0
    * setuptools support

    * variable and column alias stinfo optimization

    * analyzer return key used in args to unambiguify solutions

    * rewrite_shared_optional refactoring



2010-03-16  --  0.25.0
    * depends on logilab-database

    * raise BadRQLQuery when using optional on attribute relation



2010-02-10  --  0.24.0
    * update to yams 0.27 api

    * fully dropped mx support

    * various bugs fixed



2009-08-26  --  0.23.0
    * Union.locate_subquery now return a 2-uple (select subquery, column index in the subquery)

    * new subquery_selection_index method on Union

    * new root_selection_index method on VariableRef



2009-08-18  --  0.22.2
    * fixes to compile with different versions of gecode



2009-05-04  --  0.22.0
    * consider subqueries in variables graph

    * py datetime support (must be explicitly activated until we drop mx.DateTime support)

    * implements main_relation on ColumnAlias



2009-02-17  --  0.21.0
    * new type solver based on gecode



2008-10-17  --  0.20.2
    * new remove_subquery method on Select node

    * remove_node accepts a new 'undefine' argument (default to False for bw compat)
     telling if it should undefine no more referenced variables



2008-10-09  --  0.20.1
    * introduce "sqlscope" where NOT node is considered as a new scope

    * rql checker raise BadRQLQuery for inconsistent orderby on distinct query

    * correctly restore .parent when undoing RemoveNodeOperation



2008-09-24  --  0.20.0
    * is_instance_of support

    * raise BadRQLQuery on queries like 'Any X WHERE X name Toto, P is Person'

    * "NOT X identity Y" is now allowed

    * do not add relation constraint on variables used in math expression



2008-08-29  --  0.19.2
    * fix undoing of add_relation and variable name allocation on query using
      some subquery

    * add missing selected_index() method on ColumnAlias
